--- a/views/partials/footer-script.ejs
+++ b/views/partials/footer-script.ejs
@@ -4,7 +4,7 @@
 
 
 
-      <script src="/assets/plugins/jQuery/jquery-1.12.4.min.js" type="text/javascript"></script>
+      <!-- <script src="/assets/plugins/jQuery/jquery-1.12.4.min.js" type="text/javascript"></script> -->
       <!-- jquery-ui --> 
     
 
@@ -18,14 +18,14 @@
        <script src="/assets/plugins/jQuery/jquery.min.js"></script> -->
        <script src="/assets/plugins/jQuery/jquery.dataTables.min.js"></script>
 		<script src="/assets/bootstrap/js/dataTables.bootstrap.min.js"></script>  
-		<script src="/assets/dist/js/toastr.min.js"></script>
+	
 	
       <script src="/assets/plugins/jquery-ui-1.12.1/jquery-ui.min.js" type="text/javascript"></script>
       
       <!-- Bootstrap -->
       <script src="/assets/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-      	<link href="/assets/bootstrap/css/bootstrap-editable.css" rel="stylesheet"> 
-  		<script src="/assets/bootstrap/js/bootstrap-editable.js"></script>
+      	<!-- <link href="/assets/bootstrap/css/bootstrap-editable.css" rel="stylesheet"> 
+  		<script src="/assets/bootstrap/js/bootstrap-editable.js"></script> -->
       <!-- lobipanel -->
       <script src="/assets/plugins/lobipanel/lobipanel.min.js" type="text/javascript"></script>
       
@@ -45,8 +45,8 @@
       <!-- ChartJs JavaScript -->
       <script src="/assets/plugins/chartJs/Chart.min.js" type="text/javascript"></script>
       <!-- Counter js -->
-      <script src="/assets/plugins/counterup/waypoints.js" type="text/javascript"></script>
-      <script src="/assets/plugins/counterup/jquery.counterup.min.js" type="text/javascript"></script>
+      <!-- <script src="/assets/plugins/counterup/waypoints.js" type="text/javascript"></script>
+      <script src="/assets/plugins/counterup/jquery.counterup.min.js" type="text/javascript"></script> -->
       <!-- Monthly js -->
       <script src="/assets/plugins/monthly/monthly.js" type="text/javascript"></script>
 
@@ -59,10 +59,11 @@
         <script src="/assets/plugins/dataTables/buttons.html5.min.js"></script>
         <script src="/assets/plugins/dataTables/buttons.print.min.js"></script>
         <script src="/assets/plugins/dataTables/buttons.colVis.min.js"></script>
+        	<script src="/assets/dist/js/toastr.min.js"></script>
       <!-- End Page Lavel Plugins
          =====================================================================-->
-         <script src="/assets/plugins/modals/classie.js" type="text/javascript"></script>
-      <script src="/assets/plugins/modals/modalEffects.js" type="text/javascript"></script>
+         <!-- <script src="/assets/plugins/modals/classie.js" type="text/javascript"></script>
+      <script src="/assets/plugins/modals/modalEffects.js" type="text/javascript"></script> -->
       <!-- Start Theme label Script
          =====================================================================-->
                <script src="/assets/dist/js/sweetalert2.all.min.js"></script>
