--- a/views/partials/top-bar.ejs
+++ b/views/partials/top-bar.ejs
@@ -7,17 +7,17 @@
       <title>ERP Admin Panel</title>
     
 		<link rel="stylesheet" href="/assets/dist/css/toastr.min.css" /> 
-		<link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css" /> 
+		<!-- <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css" />  -->
 		
 	<link rel="stylesheet" href="/assets/bootstrap/css/dataTables.bootstrap.min.css" />
 		
       <!-- Datatable CSS -->
-<link href='/assets/dist/css/jquery.dataTables.min.css' rel='stylesheet' type='text/css'>
+<!-- <link href='/assets/dist/css/jquery.dataTables.min.css' rel='stylesheet' type='text/css'> -->
 
 
 
 <!-- Datatable JS -->
-<script src="/assets/dist/js/jquery.dataTables.min.js"></script>
+<!-- <script src="/assets/dist/js/jquery.dataTables.min.js"></script> -->
       <!-- Favicon and touch icons -->
       <link rel="shortcut icon" href="/assets/dist/img/ico/favicon.png" type="image/x-icon">
       <!-- Start Global Mandatory Style
@@ -25,7 +25,7 @@
          =====================================================================-->
          
       <!-- jquery-ui css -->
-      <link href="/assets/plugins/jquery-ui-1.12.1/jquery-ui.min.css" rel="stylesheet" type="text/css"/>
+      <!-- <link href="/assets/plugins/jquery-ui-1.12.1/jquery-ui.min.css" rel="stylesheet" type="text/css"/> -->
       <!-- Bootstrap -->
       <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
       
