--- a/views/admin/exam/exam.ejs
+++ b/views/admin/exam/exam.ejs
@@ -48,6 +48,7 @@
             </div>
             <div class="col-md-6 text-right">
                 <a href="#" class="btn btn-add" data-toggle="modal" data-target="#addExam-lg"><i class="fa fa-plus"></i> Add New</a>
+                 <input type="button" class="btn-sm btn-primary" id="multAssign"  value='Assign to Student' >
                
 				
             </div>
@@ -192,6 +193,34 @@
                   </div>
                   <!-- /.modal-dialog -->
                </div>
+                <div class="modal fade" id="asignMultipleCertificateModal" tabindex="-1" role="dialog">
+                      
+                  <div class="modal-dialog">
+                     <div class="modal-content">
+                        <div class="modal-header modal-header-primary">
+                           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                           <h3><i class="fa fa-plus m-r-5"></i> Assign Exam</h3>
+                        </div>
+                        <div class="modal-body">
+                          <input type="checkbox" class='assignAllClass' id='assignAllClass'> &nbsp;class wise &nbsp;&nbsp;&nbsp;
+                          <input type="checkbox" class='assignAllstudent' id='assignAllschool'> &nbsp;school wise
+
+                          <input type="hidden" name="classValue" id="classValue">
+                          <input type="hidden" name="schoolValue" id="schoolValue">
+                        </br>
+                              <div id="asignMultipleCertificateDiv">
+                               
+                             
+                           </div>
+                        </div>
+                        <div class="modal-footer">
+                           <button type="button" class="btn btn-danger pull-left" data-dismiss="modal">Close</button>
+                        </div>
+                     </div>
+                     <!-- /.modal-content -->
+                  </div>
+                  <!-- /.modal-dialog -->
+               </div>
                 <div class="modal fade" id="deleteExamModal" tabindex="-1" role="dialog">
                   <div class="modal-dialog">
                      <div class="modal-content">
@@ -284,6 +313,109 @@
         viewExam(trackId, schoolId, classId);
     }
 });
+
+$(document).on('change','#classes', function () {
+   var id = $(this).val(); 
+  $.ajax({
+         url: `/report/fetch-student-by-class`,
+         type: "post",
+         data:{classId:id},
+         dataType: "json",
+         cache: false,
+          beforeSend: function() {
+          $('#loader').removeClass('hidden')
+             },
+         success: function (data) {
+            console.log(data);
+         let option;
+        for(let i=0; i<data.length; i++){
+           option += `<option value="${data[i].track_id}">${data[i].name}</option>`
+        }
+             $("#student").html("");
+             
+             $("#student").html(`<option value="">Please Select.</option>`);
+            $("#student").append(option);
+          
+          
+          
+        },
+         complete: function(){
+                      $('#loader').addClass('hidden')
+                      },
+      });
+})
+
+   $('#assignAllClass').change(function(){
+      if($(this).is(':checked')) {
+        $('#student').prop('disabled', true);
+        $('#classValue').val('class');
+
+      } else {
+        $('#student').prop('disabled', false);
+             $('#classValue').val('');
+
+      }
+    });
+
+    $('#assignAllschool').change(function(){
+    if ($(this).is(':checked')) {
+        $('#schoolValue').val('school');
+         $('#classValue').val('');
+        $('#student').prop('disabled', true);
+        $('#classes').prop('disabled', true);
+        $('#assignAllClass').prop('disabled', true);
+    } else {
+        if (!$('#assignAllClass').is(':checked')) {
+            $('#student').prop('disabled', false);
+              $('#classValue').val('');
+        }else{
+           $('#classValue').val('class');
+        }
+          $('#schoolValue').val('');
+        $('#classes').prop('disabled', false);
+        $('#assignAllClass').prop('disabled', false);
+    }
+});
+
+$(document).on('click','#assign', function () {
+   var classId = $('#classes').val(); 
+   var studentId = $('#student').val();
+   let schoolValue =  $('#schoolValue').val();
+       let classValue =  $('#classValue').val(); 
+   // Read all checked checkboxes
+   if($('#assignAllClass').is(':checked') && classId ==""){
+      toastr.error("Please select Class !!")
+   }
+   // else if((!$('#assignAllClass').is(':checked') && !$('#assignAllSchool').is(':checked')) && (classId =="" && studentId =="")){
+   //    toastr.error("Please select Class !!")
+   // }
+   else{
+      
+      var exam = [];
+      $("input:checkbox[class=delete_check]:checked").each(function () {
+         exam.push($(this).attr('data-id'));
+      });
+       
+     
+      // Check checkbox checked or not
+      if(exam.length > 0){
+  $.ajax({
+         url: `/exam/assign-exam`,
+         type: "post",
+         data:{classId:classId,studentId:studentId,exam:exam,schoolValue:schoolValue,classValue:classValue },
+         dataType: "json",
+         success: function (data) {
+          
+               toastr.success("Exam Assigned !")
+           
+        },
+         
+      });
+      }else{
+         toastr.error("Checkbox are not selected !")
+      }
+   }
+})
 
  $("#examForm").on("submit", async e => {
 							e.preventDefault();
@@ -546,6 +678,73 @@ $(document).ready(function(){
  }
       
    });
+    $('#multAssign').click(function(){
+  if($('.delete_check:checked').length > 0){
+  
+      $("#asignMultipleCertificateDiv").html("");
+      $("#asignMultipleCertificateModal").modal("toggle");
+    $.ajax({
+         url: `/report/get-class`,
+         type: "post",
+         data:{},
+         dataType: "json",
+         cache: false,
+          beforeSend: function() {
+          $('#loader').removeClass('hidden')
+             },
+         success: function (data) {
+            console.log(data);
+         let option;
+        for(let i=0; i<data.length; i++){
+           option += `<option value="${data[i].track_id}">${data[i].class_name}</option>`
+        }
+             $("#classes").html("");
+             
+             $("#classes").html(`<option value="">Please Select.</option>`);
+            $("#classes").append(option);
+          
+          
+          
+        },
+         complete: function(){
+                      $('#loader').addClass('hidden')
+                      },
+      });
+          
+            let formDetails = ``;
+            formDetails += `
+                            <div class="row">
+                             
+                                   <div class="form-group col-lg-6">
+                                    <label>Class</label>
+                                   <select name="student_class_id" id="classes" class="form-control">
+                                    <option value="">Please Select</option>
+                                  
+                                   </select>
+                                </div>
+                                  <div class="form-group col-lg-6">
+                                    <label>Student</label>
+                                   <select name="student_class_id" class="form-control" id="student">
+                                    <option value="">Please Select</option>
+                                  
+                                   </select>
+                                </div>
+                               
+                            </div>
+                            <div align="center">
+                               <input type="submit" id="assign" class="btn btn-success"
+															value="Assign">
+															
+                            </div>
+                       
+                 `;
+            $("#asignMultipleCertificateDiv").html(formDetails);
+            }else{
+   toastr.error("Please select at least one Exam !")
+
+ }
+      
+   });
    $(document).on('click','#delete_record',function(){
       var deleteids_arr = [];
       // Read all checked checkboxes
@@ -623,62 +822,10 @@ var dataTable = $('#sample_data').DataTable({
       
         { data: "action" },
 	],
-		createdRow:function(row, data, rowIndex)
-		{
-			$.each($('td', row), function(colIndex){
-				if(colIndex == 1)
-				{
-					$(this).attr('data-name', 'exam_name');
-					$(this).attr('class', 'exam_name');
-					$(this).attr('data-type', 'text');
-					$(this).attr('data-pk', data.id);
-				}
-				if(colIndex == 2)
-				{
-					$(this).attr('data-name', 'class_name');
-					$(this).attr('class', 'class_name');
-					$(this).attr('data-type', 'select');
-					$(this).attr('data-pk', data.id);
-				}
-				
-			});
-		}
+		 
 	});
 
-	$('#sample_data').editable({
-		container:'body',
-		selector:'td.exam_name',
-		url:'/exam/update-exam',
-		title:'Exam Exam Name',
-		type:'POST',
-		validate:function(value){
-			if($.trim(value) == '')
-			{
-				return 'This field is required';
-			}
-				toastr.success('Record Updated Successfuly !!')
-
-		}
-		
-	});
-
-	$('#sample_data').editable({
-		container:'body',
-		selector:'td.class_name',
-		url:'/exam/update-exam',
-		title:'Class Name',
-		type:'POST',
-		validate:function(value){
-			
-			if($.trim(value) == '')
-			{
-				return 'This field is required';
-			}
-			toastr.success('Record Updated Successfuly !!')
-		}
-	});
-
-
+	  
 	
 });	
 setTimeout(function () {
