--- a/views/admin/attendance/attendance-faculty.ejs
+++ b/views/admin/attendance/attendance-faculty.ejs
@@ -23,7 +23,8 @@
                   <small>Very detailed & featured admin.</small>
                </div>
             </section>
-			
+			      <%- include('../../partials/loader') %>
+
             <!-- Main content -->
             <section class="content">
           
