--- a/views/admin/feedback/feedback.ejs
+++ b/views/admin/feedback/feedback.ejs
@@ -9,7 +9,7 @@
          <!-- Left side column. contains the sidebar -->
        <%- include('../../partials/sidebar') %>
 	
-   
+      <%- include('../../partials/loader') %>
          <!-- =============================================== -->
          <!-- Content Wrapper. Contains page content -->
          <div class="content-wrapper">
