--- a/views/admin/report/report-faculty.ejs
+++ b/views/admin/report/report-faculty.ejs
@@ -23,18 +23,13 @@
          <!-- =============================================== -->
          <!-- Left side column. contains the sidebar -->
        <%- include('../../partials/sidebar') %>
+                      <%- include('../../partials/loader') %>
 	
    
          <!-- =============================================== -->
          <!-- Content Wrapper. Contains page content -->
          <div class="content-wrapper">
-			   <div class="loader" id="loader">
-      <img
-        class="loading-image" style="width: 100px;"
-        src="/assets/images/loader.webp"
-        alt="loading.."
-      />
-	   </div>
+			 
             <!-- Content Header (Page header) -->
             <section class="content-header">
                <div class="header-icon">
