--- a/views/admin/attendance/attendance-student.ejs
+++ b/views/admin/attendance/attendance-student.ejs
@@ -8,7 +8,8 @@
          <!-- Left side column. contains the sidebar -->
        <%- include('../../partials/sidebar') %>
 	
-   
+         <%- include('../../partials/loader') %>
+
          <!-- =============================================== -->
          <!-- Content Wrapper. Contains page content -->
          <div class="content-wrapper">
