--- a/views/admin/financial/view-student-fee-details.ejs
+++ b/views/admin/financial/view-student-fee-details.ejs
@@ -8,6 +8,7 @@
          <!-- =============================================== -->
          <!-- Left side column. contains the sidebar -->
        <%- include('../../partials/sidebar') %>
+                 <%- include('../../partials/loader') %>
 	
    
          <!-- =============================================== -->
