--- a/views/admin/test-series/full-length-test.ejs
+++ b/views/admin/test-series/full-length-test.ejs
@@ -8,6 +8,8 @@
          <!-- =============================================== -->
          <!-- Left side column. contains the sidebar -->
        <%- include('../../partials/sidebar') %>
+                  <%- include('../../partials/loader') %>
+
 	
    
          <!-- =============================================== -->
