--- a/views/partials/loader.ejs
+++ b/views/partials/loader.ejs
@@ -1,1 +1,16 @@
+	<style>
+      .overlay {
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(20, 19, 19, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+   </style>
 <div id="loader" class="lds-dual-ring hidden overlay"></div>
