--- a/views/admin/register.ejs
+++ b/views/admin/register.ejs
@@ -40,6 +40,7 @@
                         </div>
                     </div>
                      <%- include('../partials/message') %>
+                        <%- include('../partials/loader') %>
                       <div class="panel-body" >
                          <div align="right">
                                
@@ -395,9 +396,9 @@ $('#studentaddresscheck').click(function(){
 										success: function (data) {
                      
                   if (data) {
-                       const url = '/success.mp3'
-                    const audio = new Audio(url);
-                    audio.play();
+                    //    const url = '/success.mp3'
+                    // const audio = new Audio(url);
+                    // audio.play();
                      Swal.fire({
                     position: "top-center",
                     icon: "success",
@@ -452,9 +453,9 @@ $('#studentaddresscheck').click(function(){
                       
                      
                   if (data) {
-                       const url = '/success.mp3'
-                    const audio = new Audio(url);
-                    audio.play();
+                    //    const url = '/success.mp3'
+                    // const audio = new Audio(url);
+                    // audio.play();
                      Swal.fire({
                     position: "top-center",
                     icon: "success",
@@ -506,9 +507,9 @@ $('#studentaddresscheck').click(function(){
 										success: function (data) {
                      
                   if (data) {
-                       const url = '/success.mp3'
-                    const audio = new Audio(url);
-                    audio.play();
+                    //    const url = '/success.mp3'
+                    // const audio = new Audio(url);
+                    // audio.play();
                      Swal.fire({
                     position: "top-center",
                     icon: "success",
