--- a/views/admin/leave-tracker/leave-student-tracker.ejs
+++ b/views/admin/leave-tracker/leave-student-tracker.ejs
@@ -233,7 +233,7 @@
          =====================================================================-->
    <%- include('../../partials/footer-script') %>
 
-   <script type="text/javascript" language="javascript">
+   <script nonce="<%= nonce %>" type="text/javascript" language="javascript">
 
 
      document.addEventListener("click", function(event) {
